Se Termina la historia 3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
