--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost/restaurante
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/restaurante
+spring.datasource.username=postgres
+spring.datasource.password=200518fr
 spring.jpa.hibernate.ddl-auto=update
 
 springdoc.api-docs.enabled=true
